@@ -1,3 +1,9 @@
+2004-06-18  Sarfraaz Ahmed <asarfraaz@novell.com>
+
+	* addressbook/e-book-backend-exchange.c : Modified the backend 
+	members to now accept "opid".
+	* addressbook/e-book-backend-gal.c : Similar
+
 2004-06-18  Sushma Rai  <rsushma@novell.com>
 
 	* addressbook/e-book-backend-exchange.c (proppatch_date): Freeing
